# ros_project_ws

./: .ycm_extra_conf.py  README.md
ros_snake/: .ycm_extra_conf.py
ros_snake/devel/: .catkin  local_setup.sh  setup.sh
ros_snake/devel/lib/pkgconfig/: snake.pc  snake_moveit_config.pc
ros_snake/devel/lib/snake/: snake_node_1_pub  snake_node_1_sub  snake_node_2_pub  snake_node_2_sub
ros_snake/src/snake/: CMakeLists.txt  urdf.rviz
ros_snake/src/snake/config/: snake_control.yaml  snake_control1.yaml
ros_snake/src/snake/launch/: snake_gazebo.launch  snake_gazebo1.launch  snake_rviz.launch
ros_snake/src/snake/meshes/: Link_10.STL  Link_11.STL  Link_12.STL  Link_14.STL  Link_16.STL  Link_18.STL  Link_20.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Link_7.STL  Link_8.STL
ros_snake/src/snake/snake_xacro/: snake.xacro  snake_head.xacro  snake_head1.xacro  snake_orthogonal_joint.xacro  snake_orthogonal_joint1.xacro
ros_snake/src/snake/src/: snake_node_1_pub.cpp  snake_node_1_sub.cpp  snake_node_2_pub.cpp  snake_node_2_sub.cpp
ros_snake/src/snake/urdf/: snake.csv
ros_snake/src/snake_moveit_config/: .setup_assistant
ros_snake/src/snake_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  snake.srdf
ros_snake_like_robot/: .ycm_extra_conf.py
ros_snake_like_robot/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros_snake_like_robot/src/cpg_hopf_control_1/: CMakeLists.txt  package.xml
ros_snake_like_robot/src/snake_simulate/: CMakeLists.txt
(+63 files in other folders)
